# hyperhook

./: .dockerignore  .gitignore  Dockerfile  README.md  deploy.sh  requirements.txt
.cursor/rules/: general.mdc
.trae/rules/: project_rules.md
backend/: Dockerfile  alembic.ini  app.py  app_backup.py  config.py  dashboard_service.py  docker-compose.yml  fly.toml  hyperliquid_client.py  hyperliquid_trader.db  pnl_calculator.py  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 20250801_173714_standardize_trade_types.py  60af4bcf54fa_add_pnl_system_tables.py  86475f0d7646_initial_migration_with_existing_tables.py  8c056592a587_add_hyperliquid_symbol_to_webhook_.py  rename_asset_name_to_trading_view_symbol.py
backend/application/services/: quantity_calculator.py  trade_analyzer.py  webhook_logger.py
backend/application/use_cases/: auth_use_cases.py  pnl_use_cases.py  trading_use_cases.py  user_use_cases.py  wallet_use_cases.py  webhook_trading_use_cases.py  webhook_use_cases.py
backend/domain/: models.py  schemas.py
backend/env/: pyvenv.cfg
backend/infrastructure/: database.py  security.py
backend/infrastructure/services/: pnl_calculator.py
backend/presentation/routes/: auth_routes.py  pnl_routes.py  trading_routes.py  user_routes.py  wallet_routes.py  webhook_routes.py
frontend/: .dockerignore  .env.example  Dockerfile  fly.toml  nginx.conf  package-lock.json  package.json
frontend/public/: index.html  manifest.json
frontend/src/: App.js
frontend/src/pages/: AuthPage.js  DashboardPage.js  LogsPage.js  index.js  (+3 more)
(+14 files in other folders)
