[project]
name = "hyperhook"
version = "0.1.0"
description = ""
authors = [
    {name = "Pedro Lucas Lima",email = "pedro.lima@mercadolivre.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask (>=3.1.1,<4.0.0)",
    "flask-sqlalchemy (>=3.1.1,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
